[package]
name = "reprehensible"
version = "0.1.0"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"
description = "experimental authenticated and encrypted unordered datagrams"
license = "MIT OR Apache-2.0"

[dependencies]
rust_sodium = "0.10.2"
rand = "0.6.5"
sha2 = "0.8.0"
byteorder = "1.3.1"

[dev-dependencies]
lru = "0.1.15"
