[package]
name = "reprehensible"
version = "0.1.0"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"
description = "experimental authenticated and encrypted unordered datagrams"
license = "MIT OR Apache-2.0"

[dependencies]
rust_sodium = "0.10.2"
bincode = "1.1.3"
serde = { version = "1", features = ["derive"] }
pow = "0.1.2"
shrinkwraprs = "0.2.1"
sealed = { git = "https://github.com/bddap/sealed.git" }
sha2 = "0.8.0"
